add all responsive

--- a/index.html
+++ b/index.html
@@ -281,21 +281,21 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="foot">
+    <footer class="foot">
         <div class="foot-content">
-            <div>
+            <div class="foot-main">
                 <h2 class="foot-head">
                     Fitness
                 </h2>
                 <p class="foot-text">
-                    We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts. 
+                    We believe fitness should be accessible to everyone,everywhere, regardless of income or access to a gym. With hundreds of professional workouts. 
                 </p>
             </div>
-            <div>
+            <div class="foot-box">
                 <h4 class="foot-get">
                     Get Started
                 </h4>
-                <div>
+                <div class="foot-after">
                     <h6 class="foot-point">Service</h6>
                     <h6 class="foot-point">Contact Us</h6>
                     <h6 class="foot-point">Affiliate Program</h6>
@@ -306,7 +306,7 @@
                 <h4 class="foot-get">
                     Get Started
                 </h4>
-                <div>
+                <div class="foot-after">
                     <h6 class="foot-point">Fitness</h6>
                     <h6 class="foot-point">Platform</h6>
                     <h6 class="foot-point">Workout Libary</h6>
@@ -318,6 +318,6 @@
             <hr class="hr-line">
             <p class="reserved">All right reserved @Fitness 2024</p>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
