--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="bg-fitness">
         <nav class="nav-bar">
             <h3 class="brand">
-                Fitness
+                <i>Fitness</i>
             </h3>
             <ul class="nav-links">
                 <li class="nav-item"><a href="" class="nav-link" id="link-one">Home</a></li>
@@ -52,7 +52,7 @@
             </div>
             <div class="vdo-btn">
                 <div class="elipse">
-
+                    
                 </div>
                 <div class="vdo-text">
                     <h5 class="vdo-num">
@@ -126,6 +126,54 @@
                     </h5>
                     <p class="habits-subtitle">
                         We believe fitness should be accessible to everyone
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="limit">
+            <div class="limit-header">
+                <h3 class="limit-head">
+                    WHY CHOSE US?
+                </h3>
+                <h2 class="limit-push">
+                    PUSH YOUR LIMITS FORWARD
+                </h2>
+            </div>
+            <div class="limit-content">
+                <div class="limit-container">
+                    <img src="images/icons8-treadmill-100.png" alt="">
+                    <h5 class="limit-title">
+                        Modern Equipment
+                    </h5>
+                    <p class="limit-text">
+                        Our gym's modern equipment includes high-tech machines and interactive tools, designed to enhance every workout.
+                    </p>
+                </div>
+                <div class="limit-container">
+                    <img src="images/icons8-healthy-diet-100.png" alt="">
+                    <h5 class="limit-title">
+                        Healthy Nutrition Plan
+                    </h5>
+                    <p class="limit-text">
+                        Our nutrition plan provides balanced, nutrient-rich meals designed to support fitness goals and overall wellness.
+                    </p>
+                </div>
+                <div class="limit-container">
+                    <img src="images/icons8-barbell-100.png" alt="">
+                    <h5 class="limit-title">
+                        Professional Training Plan
+                    </h5>
+                    <p class="limit-text">
+                        Our professional training plan delivers expert guidance and personalized workouts to maximize performance and achieve your goals.
+                    </p>
+                </div>
+                <div class="limit-container">
+                    <img src="images/icons8-heart-puzzle-100.png" alt="">
+                    <h5 class="limit-title">
+                        Unique To Your Needs
+                    </h5>
+                    <p class="limit-text">
+                        Our services are uniquely tailored to your individual needs, ensuring personalized solutions for optimal results. 
                     </p>
                 </div>
             </div>
@@ -285,7 +333,7 @@
         <div class="foot-content">
             <div class="foot-main">
                 <h2 class="foot-head">
-                    Fitness
+                    <i>Fitness</i>
                 </h2>
                 <p class="foot-text">
                     We believe fitness should be accessible to everyone,everywhere, regardless of income or access to a gym. With hundreds of professional workouts. 
@@ -301,7 +349,7 @@
                     <h6 class="foot-point">Affiliate Program</h6>
                     <h6 class="foot-point">About Us</h6>
                 </div>
-            </div>
+            </div>                            
             <div class="foot-box">
                 <h4 class="foot-get">
                     Get Started
