--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="vdo-btn">
                 <div class="elipse">
-                    
+                    <img src="images/icons8-play-button-50.png" alt="">
                 </div>
                 <div class="vdo-text">
                     <h5 class="vdo-num">
