added all commits

--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
                 
             </div>
             <div class="work-vdo">
-                <h4 class="work-num">
-                    500+
-                </h4>
-                <p class="work-tut">
-                    Free Workout Videos
+                <div class="work-content">
+                    <h4 class="work-num">
+                        500+
+                    </h4>
+                    <p class="work-tut">
+                        Free Workout Videos
+                </div>
                 </p>
             </div>
         </div>
