--- a/index.html
+++ b/index.html
@@ -76,13 +76,6 @@
             </div>
         </div>
     </header>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <main class="content">
         <section class="Habits">
             <div class="habits-content">
@@ -90,7 +83,7 @@
                     Change Your Habits
                 </h3>
                 <p class="habits-text">
-                    We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. 
+                    Changing habits requires consistent effort, patience, and self-awareness. Small, achievable steps build momentum toward lasting transformation and growth.
                 </p> 
             </div>
             <div class="habits-imgs">
@@ -100,7 +93,7 @@
                         Movement
                     </h5>
                     <p class="habits-subtitle">
-                        We believe fitness should be accessible to everyone 
+                        Small steps consistently lead to big habit changes.
                     </p>
                 </div>
                 <div class="habits-container">
@@ -109,7 +102,7 @@
                         Time
                     </h5>
                     <p class="habits-subtitle">
-                        We believe fitness should be accessible to everyone
+                        Consistency and patience are key to changing habits. 
                     </p>
                 </div>
                 <div class="habits-container">
@@ -118,7 +111,7 @@
                         Practice                     
                     </h5>
                     <p class="habits-subtitle">
-                        We believe fitness should be accessible to everyone
+                        Consistency transforms small efforts into lasting habit changes. 
                     </p>
                 </div>
                 <div class="habits-container">
@@ -127,7 +120,7 @@
                         Weight Loss
                     </h5>
                     <p class="habits-subtitle">
-                        We believe fitness should be accessible to everyone
+                        Gradual progress and persistence lead to habit change.
                     </p>
                 </div>
             </div>
@@ -188,7 +181,7 @@
                         Mile Easily
                     </h3>
                     <p class="run-text">
-                        We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.
+                        Changing your running routine involves gradually increasing distance, varying speed, and incorporating cross-training. Consistency and adaptation help improve performance and prevent injury.
                     </p>
                     <button class="run-btn">Join Now</button>
                 </div>
@@ -203,7 +196,7 @@
                     BMI Calculator
                 </h3>
                 <p class="bmi-text">
-                    We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+                    To calculate BMI, divide your weight in kilograms by your height in meters squared. This formula provides an estimate of body fat.
                 </p>
             </div>
         </section>
@@ -241,7 +234,7 @@
                         Calculate your BMI
                     </h3>
                     <p class="calc-text">
-                        We believe fitness should be accessible to everyone, everywhere, regardless of <br>income or access to a gym.  
+                        After calculating BMI, interpret the result using the categories: underweight, normal weight, overweight, or obese, to assess potential health risks.
                     </p>
                     <form>
                         <div>
@@ -275,7 +268,7 @@
                         Meet Our Team
                     </h3>
                     <p class="team-text">
-                        We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.
+                        A gym trainer provides personalized workout plans, motivation, and guidance on exercise techniques to help you achieve your fitness goals effectively and safely.
                     </p>
                 </div> 
                 <div class="team-imgs">
@@ -338,7 +331,7 @@
                     <i>Fitness</i>
                 </h2>
                 <p class="foot-text">
-                    We believe fitness should be accessible to everyone,everywhere, regardless of income or access to a gym. With hundreds of professional workouts. 
+                    A gym center offers diverse fitness equipment, classes, and amenities, creating a supportive environment for achieving health goals and enhancing overall wellness.  
                 </p>
             </div>
             <div class="foot-box">
